2012-09-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/r2k/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/r3ka/crt0.s,
	  device/lib/z80/crt0.s,
	  device/lib/z80/crtcall.s,
	  src/SDCCglue.c,
	  src/port.h,
	  src/SDCCmem.c,
	  src/SDCCmem.h,
	  src/hc08/main.c,
	  src/ds390/main.c,
	  src/z80/main.c,
	  src/mcs51/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c:
	  Most of RFE #3565759.
	* device/lib/r2k/Makefile.in,
	  device/lib/z180/Makefile.in,
	  device/lib/r3ka/Makefile.in,
	  device/lib/z80/Makefile.in:
	  Removed obsolete RLE initialization support.

2012-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08pst.c,
	* sdas/as8051/i51pst.c,
	* sdas/asgb/gbpst.c,
	* sdas/asrab/rabpst.c,
	* sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asxxxx.h: next step to ASxxxx v5

2012-09-27 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/inc2h.pl, support/scripts/cinc2h.pl,
	  support/scripts/inc2h-pic16.pl: fixed typo tbut

2012-09-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3467508.c:
	  Regression test for bug #3467508.

2012-09-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #3467508

2012-09-26 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/cinc2h.pl: added,
	  thanks to Molnar Karoly

2012-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asrab/rabbitext.c: removed
	* sdas/asrab/rabbit.h,    sdas/asrab/rab.h,
	* sdas/asrab/rabbitadr.c, sdas/asrab/rabadr.c,
	* sdas/asrab/rabbitmch.c, sdas/asrab/rabmch.c,
	* sdas/asrab/rabbitpst.c, sdas/asrab/rabpst.c: renamed
	* sdas/asrab/asrab.vcxproj,
	* sdas/asrab/asrab.vcxproj.filters,
	* sdas/asrab/Makefile.in: updated
	* sdas/as6808/m08pst.c,
	* sdas/as8051/i51pst.c,
	* sdas/asgb/gbpst.c,
	* sdas/asrab/rabpst.c,
	* sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asmain.c,